<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.media3.ui.PlayerView

            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintTop_toTopOf="parent"
            app:show_subtitle_button="true"/>


        <androidx.media3.ui.PlayerView

            android:id="@+id/player_mux"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player"
            app:show_subtitle_button="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_mux">

            <io.fastpix.fastpixplayer.TextParamEntryView
                android:id="@+id/configurable_player_titel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:title="@string/label_title" />

            <io.fastpix.fastpixplayer.TextParamEntryView
                android:id="@+id/configurable_player_playback_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:title="@string/label_playback_id" />

            <io.fastpix.fastpixplayer.TextParamEntryView
                android:id="@+id/configurable_player_custom_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:hint="@string/unspecified_custom_domain"
                app:title="@string/label_custom_domain" />

            <io.fastpix.fastpixplayer.TextParamEntryView
                android:id="@+id/configurable_player_stream_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:hint="@string/unspecified_stream_type"
                app:title="@string/label_stream_type" />
           <!-- <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:title="@string/label_stream_type" />
            <RadioGroup
                android:id="@+id/stream_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/radio_ondemand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="on-demand" />

                <RadioButton
                    android:id="@+id/radio_livestream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="live-stream"
                    android:layout_marginStart="16dp" />
            </RadioGroup>-->

            <io.fastpix.fastpixplayer.TextParamEntryView
                android:id="@+id/configurable_player_playback_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:hint="@string/unspecified_token"
                app:title="@string/label_playback_token" />


            <Button
                android:id="@+id/configurable_player_update_media_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/update_tokens_ids" />

            <TextView
                android:id="@+id/url_media_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:padding="10dp"
                app:title="@string/final_url" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
